tests/ui/consts/const-eval/panic-assoc-never-type.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: in this expansion of `$crate::panic::panic_2015!` (#2)
  ::: $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: the evaluated program panicked at 'explicit panic', $DIR/panic-assoc-never-type.rs:9:21
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `panic!` (#1)
   |
  ::: $DIR/panic-assoc-never-type.rs:9:21
   |
LL |     const VOID: ! = panic!();
   |                     --------
   |                     |
   |                     in this macro invocation (#1)
   |                     in this macro invocation (#2)

note: erroneous constant used
  --> $DIR/panic-assoc-never-type.rs:14:13
   |
LL |     let _ = PrintName::VOID;
   |             ^^^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/panic-assoc-never-type.rs:14:13
   |
LL |     let _ = PrintName::VOID;
   |             ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
